# bobPy

./: README.md  pyproject.toml  requirements.txt  run.py
bobPy/: builder.py
