[tool.poetry]
name = "py_playground"
version = "0.1.0"
description = "Lef's Python playground"
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.5"
numpy = "^1.22.1"
scipy = "^1.7.3"
jupyterlab = "^3.2.8"
streamlit = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
